// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KPIStrip > renders 5 KPI cards from green fixture 1`] = `
<div>
  <div>
    <div
      class="kpi-strip"
      style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 12px;"
    >
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          rf-Adj Excess Sharpe
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-success); font-variant-numeric: tabular-nums;"
          >
            6.14
          </span>
          <span
            class="kpi-pill kpi-pill--green"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-success); background: var(--arcis-success)1a; border: 1px solid var(--arcis-success)33;"
          >
            green
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          p=0.03  CI [0.11, 12.17]
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=160 | canonical T1.03
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          SPY-Relative Sharpe
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-success); font-variant-numeric: tabular-nums;"
          >
            2.10
          </span>
          <span
            class="kpi-pill kpi-pill--green"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-success); background: var(--arcis-success)1a; border: 1px solid var(--arcis-success)33;"
          >
            green
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          p=0.05  CI lower=0.05
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=160 | vs SPY benchmark
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Win Rate
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-success); font-variant-numeric: tabular-nums;"
          >
            69.0%
          </span>
          <span
            class="kpi-pill kpi-pill--green"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-success); background: var(--arcis-success)1a; border: 1px solid var(--arcis-success)33;"
          >
            green
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          110W / 50L
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=160 | quarantine-filtered
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Stage Traffic Light
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-success); font-variant-numeric: tabular-nums;"
          >
            GREEN
          </span>
          <span
            class="kpi-pill kpi-pill--green"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-success); background: var(--arcis-success)1a; border: 1px solid var(--arcis-success)33;"
          >
            green
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          t=2.17  CI lower=0.11
        </div>
        <span
          style="display: inline-block;"
        >
          <div
            data-testid="traffic-light-vote-badge"
            style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
          >
            4/5 votes
          </div>
        </span>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          S=6.14  N=160
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Total P&L
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-text-muted); font-variant-numeric: tabular-nums;"
          >
            --
          </span>
          <span
            class="kpi-pill kpi-pill--unknown"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-text-muted); background: var(--arcis-text-muted)1a; border: 1px solid var(--arcis-text-muted)33;"
          >
            unknown
          </span>
        </div>
      </div>
    </div>
    <div
      style="font-size: 11px; color: var(--arcis-text-secondary); padding: 4px 0px; display: flex; align-items: center; gap: 6px;"
    >
      <span
        style="width: 8px; height: 8px; border-radius: 50%; background: var(--arcis-success); display: inline-block; flex-shrink: 0;"
      />
      <span>
        <span
          style="font-family: var(--font-mono);"
        >
          100
          %
        </span>
         
        of recent trades are instrumentation v3
      </span>
    </div>
    <style>
      
        @media (max-width: 767px) {
          .kpi-strip { grid-template-columns: 1fr !important; }
        }
      
    </style>
  </div>
</div>
`;

exports[`KPIStrip > renders amber status pill on amber fixture 1`] = `
<div>
  <div>
    <div
      class="kpi-strip"
      style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 12px;"
    >
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          rf-Adj Excess Sharpe
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-warning); font-variant-numeric: tabular-nums;"
          >
            6.14
          </span>
          <span
            class="kpi-pill kpi-pill--amber"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-warning); background: var(--arcis-warning)1a; border: 1px solid var(--arcis-warning)33;"
          >
            amber
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          p=0.43  CI [-0.85, 13.13]
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=35 | canonical T1.03
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          SPY-Relative Sharpe
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-warning); font-variant-numeric: tabular-nums;"
          >
            2.10
          </span>
          <span
            class="kpi-pill kpi-pill--amber"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-warning); background: var(--arcis-warning)1a; border: 1px solid var(--arcis-warning)33;"
          >
            amber
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          p=0.43  CI lower=-0.85
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=35 | vs SPY benchmark
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Win Rate
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-warning); font-variant-numeric: tabular-nums;"
          >
            50.0%
          </span>
          <span
            class="kpi-pill kpi-pill--amber"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-warning); background: var(--arcis-warning)1a; border: 1px solid var(--arcis-warning)33;"
          >
            amber
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          18W / 17L
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=35 | quarantine-filtered
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Stage Traffic Light
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-warning); font-variant-numeric: tabular-nums;"
          >
            HOLD
          </span>
          <span
            class="kpi-pill kpi-pill--amber"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-warning); background: var(--arcis-warning)1a; border: 1px solid var(--arcis-warning)33;"
          >
            amber
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          t=1.10  CI lower=-0.85
        </div>
        <span
          style="display: inline-block;"
        >
          <div
            data-testid="traffic-light-vote-badge"
            style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
          >
            MinTRL: gate not yet evaluable (N=35, need 150)
          </div>
        </span>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          S=6.14  N=35
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Total P&L
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-text-muted); font-variant-numeric: tabular-nums;"
          >
            --
          </span>
          <span
            class="kpi-pill kpi-pill--unknown"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-text-muted); background: var(--arcis-text-muted)1a; border: 1px solid var(--arcis-text-muted)33;"
          >
            unknown
          </span>
        </div>
      </div>
    </div>
    <div
      style="font-size: 11px; color: var(--arcis-text-secondary); padding: 4px 0px; display: flex; align-items: center; gap: 6px;"
    >
      <span
        style="width: 8px; height: 8px; border-radius: 50%; background: var(--arcis-warning); display: inline-block; flex-shrink: 0;"
      />
      <span>
        <span
          style="font-family: var(--font-mono);"
        >
          86
          %
        </span>
         
        of recent trades are instrumentation v3
      </span>
    </div>
    <style>
      
        @media (max-width: 767px) {
          .kpi-strip { grid-template-columns: 1fr !important; }
        }
      
    </style>
  </div>
</div>
`;

exports[`KPIStrip > renders empty-DB state with no closed trades caption 1`] = `
<div>
  <div>
    <div
      class="kpi-strip"
      style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 12px;"
    >
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          rf-Adj Excess Sharpe
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-text-muted); font-variant-numeric: tabular-nums;"
          >
            --
          </span>
          <span
            class="kpi-pill kpi-pill--unknown"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-text-muted); background: var(--arcis-text-muted)1a; border: 1px solid var(--arcis-text-muted)33;"
          >
            unknown
          </span>
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=0 | canonical T1.03
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          SPY-Relative Sharpe
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-text-muted); font-variant-numeric: tabular-nums;"
          >
            --
          </span>
          <span
            class="kpi-pill kpi-pill--unknown"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-text-muted); background: var(--arcis-text-muted)1a; border: 1px solid var(--arcis-text-muted)33;"
          >
            unknown
          </span>
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=0 | vs SPY benchmark
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Win Rate
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-text-muted); font-variant-numeric: tabular-nums;"
          >
            --
          </span>
          <span
            class="kpi-pill kpi-pill--unknown"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-text-muted); background: var(--arcis-text-muted)1a; border: 1px solid var(--arcis-text-muted)33;"
          >
            unknown
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          0W / 0L
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=0 | quarantine-filtered
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Stage Traffic Light
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-text-muted); font-variant-numeric: tabular-nums;"
          >
            HALT
          </span>
          <span
            class="kpi-pill kpi-pill--unknown"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-text-muted); background: var(--arcis-text-muted)1a; border: 1px solid var(--arcis-text-muted)33;"
          >
            unknown
          </span>
        </div>
        <span
          style="display: inline-block;"
        >
          <div
            data-testid="traffic-light-vote-badge"
            style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
          >
            MinTRL: gate not yet evaluable — no closed trades yet
          </div>
        </span>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          S=--  N=0
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Total P&L
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-text-muted); font-variant-numeric: tabular-nums;"
          >
            --
          </span>
          <span
            class="kpi-pill kpi-pill--unknown"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-text-muted); background: var(--arcis-text-muted)1a; border: 1px solid var(--arcis-text-muted)33;"
          >
            unknown
          </span>
        </div>
      </div>
    </div>
    <style>
      
        @media (max-width: 767px) {
          .kpi-strip { grid-template-columns: 1fr !important; }
        }
      
    </style>
  </div>
</div>
`;

exports[`KPIStrip > renders loading skeleton when kpis is null 1`] = `
<div>
  <div
    class="arcis-card"
    style="padding: 20px; text-align: center;"
  >
    <span
      style="color: var(--arcis-text-muted); font-size: 13px;"
    >
      Loading KPIs...
    </span>
  </div>
</div>
`;

exports[`KPIStrip > renders red status pill on red fixture 1`] = `
<div>
  <div>
    <div
      class="kpi-strip"
      style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 12px;"
    >
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          rf-Adj Excess Sharpe
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-danger); font-variant-numeric: tabular-nums;"
          >
            -1.50
          </span>
          <span
            class="kpi-pill kpi-pill--red"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-danger); background: var(--arcis-danger)1a; border: 1px solid var(--arcis-danger)33;"
          >
            red
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          p=0.02  CI [-3.00, -0.10]
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=35 | canonical T1.03
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          SPY-Relative Sharpe
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-danger); font-variant-numeric: tabular-nums;"
          >
            -1.00
          </span>
          <span
            class="kpi-pill kpi-pill--red"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-danger); background: var(--arcis-danger)1a; border: 1px solid var(--arcis-danger)33;"
          >
            red
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          p=0.05  CI lower=-2.50
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=35 | vs SPY benchmark
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Win Rate
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-danger); font-variant-numeric: tabular-nums;"
          >
            40.0%
          </span>
          <span
            class="kpi-pill kpi-pill--red"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-danger); background: var(--arcis-danger)1a; border: 1px solid var(--arcis-danger)33;"
          >
            red
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          14W / 21L
        </div>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          N=35 | quarantine-filtered
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Stage Traffic Light
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-danger); font-variant-numeric: tabular-nums;"
          >
            HALT
          </span>
          <span
            class="kpi-pill kpi-pill--red"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-danger); background: var(--arcis-danger)1a; border: 1px solid var(--arcis-danger)33;"
          >
            red
          </span>
        </div>
        <div
          style="font-size: 11px; color: var(--arcis-text-secondary); font-family: var(--font-mono);"
        >
          t=-2.10  CI lower=-3.00
        </div>
        <span
          style="display: inline-block;"
        >
          <div
            data-testid="traffic-light-vote-badge"
            style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
          >
            MinTRL: gate not yet evaluable (N=35, need 150)
          </div>
        </span>
        <div
          style="font-size: 10px; color: var(--arcis-text-muted); margin-top: 2px;"
        >
          S=-1.50  N=35
        </div>
      </div>
      <div
        class="arcis-card"
        style="padding: 14px 16px; display: flex; flex-direction: column; gap: 6px;"
      >
        <div
          style="font-size: 11px; text-transform: uppercase; letter-spacing: 0.06em; color: var(--arcis-text-secondary); font-weight: 500;"
        >
          Total P&L
        </div>
        <div
          style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;"
        >
          <span
            style="font-size: 24px; font-weight: 600; font-family: var(--font-mono); color: var(--arcis-text-muted); font-variant-numeric: tabular-nums;"
          >
            --
          </span>
          <span
            class="kpi-pill kpi-pill--unknown"
            style="display: inline-block; padding: 2px 8px; border-radius: var(--radius-sm); font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.05em; color: var(--arcis-text-muted); background: var(--arcis-text-muted)1a; border: 1px solid var(--arcis-text-muted)33;"
          >
            unknown
          </span>
        </div>
      </div>
    </div>
    <div
      style="font-size: 11px; color: var(--arcis-text-secondary); padding: 4px 0px; display: flex; align-items: center; gap: 6px;"
    >
      <span
        style="width: 8px; height: 8px; border-radius: 50%; background: var(--arcis-danger); display: inline-block; flex-shrink: 0;"
      />
      <span>
        <span
          style="font-family: var(--font-mono);"
        >
          40
          %
        </span>
         
        of recent trades are instrumentation v3
      </span>
    </div>
    <style>
      
        @media (max-width: 767px) {
          .kpi-strip { grid-template-columns: 1fr !important; }
        }
      
    </style>
  </div>
</div>
`;
